# squiggle_salad_old

./: .gitattributes  Makefile  README.md
.github/workflows/: build_check_alignment.yml
bbmap_count_table/: dune  dune-project  lib.ml  main.ml
bbmap_count_table/test/: dune
bbmap_count_table/test/basic_test.t/: contigs.mapping___sample_11___.covstats.txt  contigs.mapping___sample_1___.covstats.txt  contigs.mapping___sample_2___.covstats.txt  contigs.mapping___sample_3___.covstats.txt  run.t
check_alignment/: Makefile  check_alignment.ml  dune  dune-project  lib.ml
check_alignment/.github/workflows/: build_and_test.yml
check_alignment/test/: dune  test_lib.ml
check_alignment/test/check_alignment.t/: aln.fa  bad_length.fa  clean_err.sh  run.t
hfsp/: dune  dune-project  main.ml
hfsp/lib/: cigar.ml  dune  lib.ml  utils.ml
hfsp/test/: dune  test_cigar.ml  test_lib.ml
hfsp/test/basic_test.t/: run.t  search.tsv
mask_alignment/: dune  dune-project  mask_alignment.ml
mask_alignment/test/: dune
mask_alignment/test/cram.t/: run.t  seqs.fa
unique_files/: dune  dune-project  unique_files.ml
unique_files/test/: dune  unique_files.t
